# robotocore

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  LOCALSTACK.md  Makefile  README.md  docker-compose.yml  gap_probe_results.json  gap_untested_ops.json  pyproject.toml
.claude/commands/: review-pr.md
.claude/skills/: add-compatibility-tests.md  changelog.md  compare-localstack.md  debug-aws-request.md  docker-build-test.md  explore-vendor-code.md  implement-service.md  lint.md  promptlog.md  use-in-tests.md
.cursor/rules/: moto-impl-strategy.mdc
.github/: dependabot.yml
.github/workflows/: app-integration-tests.yml  ci.yml  example-robotocore.yml  iac-tests.yml  localstack-parity.yml  nightly.yml  pages.yml  parity.yml  release.yml  test-quality.yml
chunks/: account.json  acm.json  amp.json  apigateway.json  appmesh.json  appsync.json  athena.json  autoscaling.json  backup.json  bedrock.json  budgets.json  ce.json  cloudformation.json  cloudfront.json  cloudtrail.json  cloudwatch.json  codepipeline.json  comprehend.json  config.json  connect.json  connectcampaigns.json  databrew.json  datapipeline.json  datasync.json  dms.json  ds.json  dsql.json  dynamodb.json  ec2.json  ecr.json  ecs.json  efs.json  eks.json  elasticache.json  elasticbeanstalk.json  elb.json  elbv2.json  emr.json  es.json  events.json  (+62 more)
cli/cdklocal/: cdklocal  cdklocal.py  cdklocal_lib.py
cli/pulumilocal/: pulumilocal  pulumilocal.py
cli/tflocal/: setup.py  tflocal  tflocal.py
contracts/: cloudformation.json  dynamodb.json  events.json  iam.json  lambda.json  logs.json  s3.json  sns.json  sqs.json  sts.json
data/: s3_launch_catalog.yaml
docker/: entrypoint.sh
docker-extension/: Dockerfile  docker-compose.yaml  metadata.json
docker-extension/ui/: index.html
docker-extension/vm/: main.py  requirements.txt
docs/: coverage.html  implementation-plan-next-level.md  index.html  s3-connectivity-matrix.md  s3-semantic-audit-report.json  session-summary-test-quality.md  slides.html  test-quality-improvements.md  test-quality-next-level.md
pilots/: README.md
probes/: account.json  acm.json  amp.json  apigateway.json  appmesh.json  appsync.json  athena.json  autoscaling.json  backup.json  bedrock.json  budgets.json  ce.json  cloudformation.json  cloudfront.json  cloudtrail.json  cloudwatch.json  codepipeline.json  comprehend.json  config.json  connect.json  connectcampaigns.json  databrew.json  datapipeline.json  datasync.json  dms.json  ds.json  dsql.json  dynamodb.json  ec2.json  ecr.json  ecs.json  efs.json  eks.json  elasticache.json  elasticbeanstalk.json  elb.json  elbv2.json  emr.json  es.json  events.json  (+62 more)
prompts/: 20260306-035638-project-inception.md  20260306-042034-plan-milestones.md  20260306-043550-implement-plan.md  20260306-043600-implement-milestones-1-through-11.md  20260306-185432-debug-ci-build-tools.md  20260306-192749-check-ci-iterate.md  20260306-192930-update-skills-worktrees-subagents.md  20260306-193631-milestone-8-gap.md  20260306-193945-fix-kinesis-bug-upstream.md  20260306-211347-skip-moto-pr-move-to-m9.md  20260306-213812-identify-ci-gaps-subagents.md  20260306-215325-commit-and-push.md  20260306-215615-plan-enterprise-parity.md  20260306-222018-implement-ga-plan.md  20260306-222100-implement-ga-milestones.md  20260306-234709-commit-and-push.md  20260307-010844-pushed-continue.md  20260307-013513-dont-stop-until-done.md  20260307-013600-autonomous-test-expansion.md  20260307-060443-setup-docker-release.md  20260307-063211-skip-pypi-github-dockerhub.md  20260307-073324-rebrand-digital-twin.md  20260307-073737-drop-localstack-scoping.md  20260307-073955-lowercase-multi-account.md  20260307-074314-agents-md-for-llms.md  20260307-090431-review-agents-md.md  20260307-202000-human-dev-workflow.md  20260307-202500-human-continue-and-promptlog.md  20260307-204500-assistant-compat-tests-batch-a.md  20260307-210000-assistant-compat-tests-batch-bc.md  20260307-220000-human-cleanup-gap-analysis.md  20260307-220100-assistant-cleanup-docs-refresh.md  20260307-220500-assistant-smoke-test-expansion.md  20260307-221500-assistant-compat-test-expansion-t1t2t3.md  20260307-promptlog-spec-discoverability.md  20260308-005000-correctness-remediation.md  20260308-010000-correctness-remediation-phase3.md  20260308-020000-overnight-automation.md  20260308-040000-cfn-resource-handler-fixes.md  20260308-060000-categorical-review-appsync-tags.md  (+261 more)
scripts/: actionable_coverage_report.py  analyze_localstack.py  audit_fallthrough.py  audit_json_versions.py  batch_probe_gap.py  batch_register_services.py  build_operation_catalog.py  build_pages.py  build_slides.py  check_compat_sharding.py  check_wire_format.py  chunk_service.py  compat_coverage.py  coverage_gaps.py  dev.py  discover_services.py  drive.py  fix_empty_except.py  fix_moto_param_names.py  gen_cfn_resource.py  gen_compat_tests.py  gen_contracts.py  gen_coverage_tests.py  gen_eventbridge_targets.py  gen_gap_tests.py  gen_lifecycle_tests.py  gen_moto_impl.py  gen_provider.py  gen_resource_lifecycle_test.py  gen_unit_tests.py  generate_assertions.py  generate_coverage.py  generate_parity_report.py  generate_quality_dashboard.py  lint_project.py  next_service.py  overnight.sh  overnight_progress.py  overnight_v2.sh  overnight_verify.py  (+19 more)
scripts/lib/: __init__.py  param_filler.py  service_names.py
site/: coverage.html  index.html  parity-report.json
src/robotocore/: __init__.py  awsroboto.py  cli.py  diagnostics.py  diagnostics_bundle.py  main.py  tls.py
tests/: conftest.py
tests/apps/: README.md  conftest.py  test_cicd_pipeline_app.py  test_content_mgmt_app.py  test_data_pipeline_app.py  test_ecommerce_order_app.py  test_event_driven_app.py  test_file_processing_app.py  test_message_queue_app.py  test_multitenant_saas_app.py  test_notification_dispatch_app.py  test_scheduled_tasks_app.py  test_secrets_rotation_app.py  test_serverless_api_app.py  test_user_auth_app.py
tests/compatibility/: conftest.py  test_account_compat.py  test_acm_compat.py  (+181 more)
(+865 files in other folders)
