[project]
name = "robotocore"
dynamic = ["version"]
description = "Free, open-source AWS emulator with full LocalStack parity, built on Moto"
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Jack Danger", email = "github@jackcanfield.com" },
]
keywords = ["aws", "mock", "localstack", "moto", "testing", "emulator", "cloud"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Mocking",
    "Framework :: Pytest",
]

dependencies = [
    # Moto installed from local vendor/ with our gap fixes
    "moto[all]>=5.0",
    "uvicorn>=0.30",
    "starlette>=0.38",
    "httpx>=0.27",
    "botocore>=1.34",
    "boto3>=1.34",
    "xmltodict>=0.13",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "python-multipart>=0.0.6",
    "aiosmtpd>=1.4",
    "dnslib>=0.9",
    "docker>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.5",
    "pytest-cov>=5.0",
    "pytest-rerunfailures>=14.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "bandit>=1.7",
    "coverage>=7.5",
    "pre-commit>=3.7",
]

[project.scripts]
robotocore = "robotocore.cli:main"
awsroboto = "robotocore.awsroboto:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0.dev0"
# CalVer: tags like v2026.3.8 become version 2026.3.8
# Between tags, dev suffix is appended (e.g. 2026.3.8.dev2+gabcdef)
# Fallback version for Docker builds where .git is not available

[tool.hatch.build.targets.wheel]
packages = ["src/robotocore"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "BLE"]

[tool.ruff.lint.per-file-ignores]
"scripts/build_slides.py" = ["E501"]  # HTML/CSS/JS template strings can't be line-wrapped
"scripts/coverage_gaps.py" = ["E501"]
"scripts/lint_project.py" = ["E501"]
"scripts/validate_app_tests.py" = ["E501"]
"scripts/validate_test_quality.py" = ["E501"]
"src/robotocore/services/ecs/provider.py" = ["E501"]
"src/robotocore/services/events/models.py" = ["E501"]
"src/robotocore/services/lambda_/event_source.py" = ["E501"]
"src/robotocore/services/sns/models.py" = ["E501"]
# BLE001: broad exception catching is intentional in server internals, test infrastructure,
# and pre-existing compat tests. BLE is enforced only in tests/moto_impl/ lifecycle tests
# where narrow ClientError is the correct type for boto3 cleanup blocks.
"src/**/*.py" = ["BLE001"]
"tests/apps/**/*.py" = ["BLE001"]
"tests/iac/**/*.py" = ["BLE001"]
"tests/parity/**/*.py" = ["BLE001"]
"tests/unit/**/*.py" = ["BLE001"]
"tests/integration/**/*.py" = ["BLE001"]
"tests/compatibility/**/*.py" = ["BLE001"]
"scripts/**/*.py" = ["BLE001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "iac: IaC integration tests (requires running server)",
    "compat: Compatibility tests (requires running server)",
    "integration: Integration tests",
    "parity: AWS parity tests (requires running server)",
]

[tool.coverage.run]
source = ["src/robotocore"]
omit = ["*/tests/*", "*/scripts/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

[tool.uv.sources]
moto = { git = "https://github.com/JackDanger/moto.git", branch = "robotocore/all-fixes" }

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
# Disable noisy codes during type-cleanup; re-enable incrementally
disable_error_code = [
    "no-any-return", "arg-type", "attr-defined", "annotation-unchecked", "return-value",
    "assignment", "union-attr", "call-overload", "call-arg", "return", "operator",
    "index", "valid-type", "var-annotated", "func-returns-value",
    "dict-item", "misc", "type-var", "override", "import-untyped",
]

[tool.bandit]
# B324: MD5 for SQS checksums (non-cryptographic). B202: tarfile — we validate paths.
# B314: xml.etree — AWS API responses. B310: url open — botocore/controlled.
# B104: bind 0.0.0.0 — emulator listens on all interfaces by design.
# B108: temp dir — we use tempfile. B608: SQL — test fixtures, not user input.
skips = ["B324", "B202", "B314", "B310", "B104", "B108", "B608"]

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "pytest-playwright>=0.7.2",
]
